--- a/templates/weights_impacts.html
+++ b/templates/weights_impacts.html
@@ -70,7 +70,7 @@
                     {% endfor %}
                 </div>
                 <div class="form-group mt-4">
-                    <label for="email" class="form-label">Enter Your Email:</label>
+                    <label for="email" class="form-label">"Enter your email"</label>
                     <input type="email" name="email" class="form-control" id="email" placeholder="Enter your email" required>
                     <div class="form-text text-muted">We'll send the results to this email address.</div>
                 </div>
